--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ciraam Website ETERNAL - STTNF SISTEM INFORMASI 2024</title>
+    <title>Cirayam Website ETERNAL - STTNF SISTEM INFORMASI 2024</title>
     <!-- Box Icons -->
     <link rel="stylesheet"
   href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
